--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
 	"private": true,
 	"scripts": {
 		"start": "node ./bin/www",
-		"test": "node ./node_modules/.bin/mocha --reporter spec"
+		"test": "node ./node_modules/.bin/mocha --reporter spec",
+		"dev": "nodemon --watch routes --watch app --watch app.js bin/www"
 	},
 	"dependencies": {
 		"chai": "^4.2.0",
 		"cookie-parser": "~1.4.4",
+		"cors": "^2.8.5",
 		"crypto-js": "^4.0.0",
 		"debug": "~2.6.9",
 		"ejs": "~2.6.1",
@@ -19,5 +21,8 @@
 		"morgan": "~1.9.1",
 		"mysql2": "^2.1.0",
 		"sequelize": "^6.3.5"
+	},
+	"devDependencies": {
+		"nodemon": "^2.0.6"
 	}
 }
